# bloomb_mini

./: .env.example  .gitignore  AGENTS.md  BLOOMBERG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.api  IDENTITY.md  LICENSE  MEMORY.md  MISSION_STATUS.md  Makefile  README.md  README_PRIME.md  README_TOP_1_PERCENT.md  SECURITY.md  SOUL.md  TROUBLESHOOTING.md  USER.md  boot.md  demo_certification.txt  demo_full_system.py  demo_output.txt  docker-compose.enterprise.yml  docker-compose.prod.yml  docker-compose.yml  final_demo_run.txt  final_mypy.txt  flights_verify.json  last_server_log.txt  list_collections.py  mypy_err.txt  mypy_errors.txt  mypy_final.txt  mypy_results.txt  mypy_signals.txt  price_impact_mypy.txt  pyproject.toml  pytest_live.txt  pytest_live_2.txt  (+36 more)
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  lint.yml
agents/: sub_agent_prompts.md
config/: constraints.yaml  on_call_rotation.json  secrets.template.json
cpp_core/: Analysis.hpp  BehavioralPredictor.hpp  CMakeLists.txt  Engine.hpp  EnvironmentalEngine.hpp  Monitor.hpp  Options.hpp  SpatialEngine.hpp  SwarmSimulator.hpp  Terminal.cpp
data/: metadata.db
docs/: audit_report.md  corpus_validation.md  data_licensing_audit.md  holdout_policy.md  incident_runbook.md  infrastructure_blueprint.md  investment_committee_minutes.md  legal_compliance_audit.md  signal_failure_runbook.md  signal_theory.md
docs/compliance/: data_licensing_manifest.json  supply_chain_map.md
frontend/: README.md  index.html  jest.config.cjs  package-lock.json  package.json  tailwind.config.js  tsc_errors.txt  vite.config.js  vite_error.txt
frontend/public/: countries.json
frontend/src/: App.css  App.test.tsx  TerminalApp.tsx  entry.tsx  index.css  main.tsx  store.ts  types.d.ts
infrastructure/cdk/: stack.py
infrastructure/grafana/: signal_health_dashboard.json
scripts/: chaos_test.py  check_api.py  miro_dashboard.py  process_sentinel.py  run_local.ps1  setup.ps1  setup.sh  update_ais_from_noaa.py  verify_gaps.py  verify_mirofish.py
sdk/sattrade/: README.md  pyproject.toml
sdk/sattrade/src/sattrade/: __init__.py  client.py
src/: __init__.py  runtime_orchestrator.py
src/alerts/: alert_engine.py
src/analysis/: ic.py
src/annotate/: __init__.py  coco_export.py  quality.py  taxonomy.py
src/api/: auth.py  broadcast.py  monitoring.py  orchestrator.py  server.py  ticker.py
src/backtest/: __init__.py  engine.py  regime_analysis.py  walk_forward.py
src/common/: __init__.py  config.py  cpp_engine.py  mappings.py  message_bus.py  production.py  rollback.py  schemas.py  trackers.py
src/data/: earnings.py  economic_data.py  fundamentals.py  macro.py  market_data.py  news.py  news_feed.py  options.py  port_statistics.py
src/db/: models.py  session.py
src/execution/: __init__.py  backtest.py  broker.py  broker_connect.py  cpp_bridge.py  live_reconciliation.py  order_manager.py  position_sizing.py  ramp_manager.py  risk_engine.py  service.py  signal_scoring.py  simulator.py
src/features/: __init__.py  ais_fusion.py  change_detection.py  detector.py  feature_store.py  lineage.py  model_registry.py  store.py
src/free_data/: aircraft.py  imagery.py  macro.py  market.py  news.py  orbits.py  quakes.py  strategic.py  thermal.py  vessels.py
src/globe/: adsb.py  ais.py  ais_live.py  geophysical_monitor.py  opensky_tracker.py  orbital_timing.py  orbits.py  squawk.py  thermal.py
src/ingest/: __init__.py  ais.py  events.py  landsat.py  quality_gates.py  sentinel.py  sentinel_free.py  source_registry.py
src/intelligence/: black_swan.py  engine.py  global_engine.py  mirofish_agent.py  swarm.py  vessel_swarm.py
src/live/: aircraft.py  base.py  conflicts.py  darkpool.py  environmental.py  insider.py  macro.py  market.py  news.py  orbits.py  portfolio.py  quakes.py  thermal.py  topo.py  vessels.py  weather.py
src/maritime/: ais_live.py  flight_tracker.py  flights_live.py  (+2 more)
tests/: __init__.py  test_backtest.py  test_core.py  test_facility_mapper.py  test_feature_store.py  test_features.py  test_ingest.py  test_live_data.py  test_opensky_auth.py  test_phases.py  test_preprocess.py  test_risk.py  test_risk_engine.py  test_sentinel.py  test_swarm_end_to_end.py  verify_engine.py
(+127 files in other folders)
