[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "satellite-trade"
version = "0.1.0"
description = "Satellite-Based AI Trading System"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Proprietary"}

dependencies = [
    # Core
    "pyyaml==6.0.1",
    "pydantic==2.6.4",
    "python-dateutil==2.9.0",

    # Geospatial
    "rasterio==1.3.9",
    "geopandas==0.14.3",
    "shapely==2.0.3",
    "pyproj==3.6.1",

    # ML/CV
    "numpy==1.26.4",
    "pandas==2.2.1",
    "scikit-learn==1.4.1",
    "torch==2.2.1",
    "ultralytics==8.1.34",       # YOLOv8
    "lightgbm==4.3.0",
    "shap==0.45.0",

    # Data pipeline
    "requests==2.31.0",
    "boto3==1.34.69",
    "kafka-python==2.0.2",
    "sqlalchemy==2.0.29",
    "psycopg2-binary==2.9.9",

    # Monitoring
    "prometheus-client==0.20.0",

    # Feature store
    "feast==0.36.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pytest-asyncio>=0.23",
    "ruff>=0.1.9",
    "mypy>=1.7",
    "localstack>=3.0",
    "moto>=4.2",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "ANN", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short --cov=src --cov-report=term-missing"
