[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "sattrade"
version = "0.1.0"
description = "Satellite-based AI trading system — top 1% global"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn[standard]==0.29.0",
    "websockets==12.0",
    "httpx==0.27.0",
    "rasterio==1.3.10",
    "numpy==1.26.4",
    "pandas==2.2.2",
    "scipy==1.13.0",
    "statsmodels==0.14.2",
    "scikit-learn==1.4.2",
    "Py6S==1.9.2",
    "ultralytics==8.2.0",
    "torch==2.3.0",
    "pytorch-forecasting==1.0.0",
    "lightgbm==4.3.0",
    "shap==0.45.0",
    "mlflow==2.12.2",
    "pydantic==2.7.1",
    "sqlalchemy==2.0.30",
    "prometheus-client==0.20.0",
    "yfinance==0.2.38",
    "alpaca-py==0.26.0",
    "python-dotenv==1.0.1",
    "pystac-client==1.10.1",
    "structlog==24.1.0",
    "rich==13.7.1",
    "pystac==1.10.1",
    "feedparser==6.0.11",
    "sgp4==2.23",
    "apscheduler==3.10.4",
    "vaderSentiment==3.3.2",
]

[project.optional-dependencies]
dev = [
    "pytest==8.2.0",
    "pytest-cov==5.0.0",
    "pytest-asyncio==0.23.6",
    "pytest-mock==3.14.0",
    "ruff==0.4.4",
    "mypy==1.10.0",
    "bandit==1.7.8",
    "pip-audit==2.7.3",
    "httpx==0.27.0",
]

[tool.ruff]
select = ["E", "F", "W", "I", "N", "UP"]
line-length = 100

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: requires external APIs (use --run-integration)",
    "slow: takes more than 30 seconds",
]
