[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sattrade"
version = "0.1.0"
description = "Institutional Satellite Intelligence SDK for Quantitative Finance"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.28.0",
    "pandas>=1.5.0",
    "websocket-client>=1.3.0",
    "pydantic>=2.0.0"
]

[project.urls]
Homepage = "https://github.com/Monkey0-9/bloomb_mini"
